[project]
name = "air-quality"
version = "0.1.0"
description = "Pipeline to analyze and predict air quality data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hopsworks[python,polars]>=4.1.2",
    "ipykernel>=6.29.5",
    "streamlit>=1.51.0",
    "openmeteo-requests",
    "requests-cache==1.2.0",
    "retry-requests==2.0.0",
    "xgboost==2.0.3",
    "scikit-learn==1.2.2",
    "plotly",
    "matplotlib==3.8.3",
    "dotenv>=0.9.9",
]
